--- a/index.pug
+++ b/index.pug
@@ -19,7 +19,7 @@ head
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='ie=edge')
     title Sten Holmberg Resume
-    link(rel='stylesheet' href='style.sass')
+    link(rel='stylesheet' href='./style.sass')
 body
     article 
         header
